# DecentEnclave

./: CMakeLists.txt
include/: CMakeLists.txt
include/DecentEnclave/: CMakeLists.txt  Config.hpp
include/DecentEnclave/Common/: AesGcmPackager.hpp  AesGcmSocketHandshaker.hpp  AesGcmStreamSocket.hpp  AuthList.hpp  CertStore.hpp  DecentCerts.hpp  DecentOid.hpp  DecentTlsConfig.hpp  DeterministicMsg.hpp  DevModeDefs.hpp  Exceptions.hpp  Keyring.hpp  KeyringKey.hpp  Logging.hpp  Time.hpp  TlsSocket.hpp  Utils.hpp
include/DecentEnclave/Common/Internal/: SimpleConcurrency.hpp  SimpleIO.hpp  SimpleObj.hpp  SimpleRlp.hpp  SimpleSysIO.hpp
include/DecentEnclave/Common/Platform/: AesGcm.hpp  PlatformTypes.hpp  Print.hpp  Random.hpp
include/DecentEnclave/Common/Sgx/: AttestationConfig.hpp  Crypto.hpp  DevModeDefs.hpp  EpidMessages.hpp  EpidRaMessages.hpp  EpidRaSvcProv.hpp  Exceptions.hpp  IasReportVerifier.hpp  IasRequester.hpp  MbedTlsInit.hpp  Time.hpp  UntrustedBuffer.hpp
include/DecentEnclave/SgxEDL/: decent_attestation.edl  decent_common.edl  net_io.edl  sys_io.edl
include/DecentEnclave/SgxEdgeSources/: AppLambdaHandler_t.cpp  Attestation_t.cpp  Attestation_u.cpp  Crypto_t.cpp  NetIO_u.cpp  SysIO_t.cpp  SysIO_u.cpp  sys_io_t.h  sys_io_u.h
include/DecentEnclave/Trusted/: AppCertRequester.hpp  AuthList.hpp  AuthListMgr.hpp  ComponentConnection.hpp  DecentLambdaClt.hpp  DecentLambdaSvr.hpp  Files.hpp  HeartbeatEmitterMgr.hpp  HeartbeatRecvMgr.hpp  PlatformId.hpp  SKeyring.hpp  Time.hpp  UntrustedAsyncEventHandler.hpp
include/DecentEnclave/Trusted/Sgx/: ComponentConnection.hpp  EnclaveIdentity.hpp  EpidRaClient.hpp  EpidSvcProvAuth.hpp  Files.hpp  IasRequester.hpp  LaInitiator.hpp  LaResponder.hpp  Random.hpp  SealKey.hpp  Time.hpp  UntrustedBuffer.hpp
include/DecentEnclave/Untrusted/: CUrl.hpp  DecentEnclaveBase.hpp  EnclaveBase.hpp  EnclaveExceptions.hpp
include/DecentEnclave/Untrusted/Config/: AuthList.hpp  EndpointsMgr.hpp
include/DecentEnclave/Untrusted/Hosting/: BoostAsioService.hpp  DecentLambdaFunc.hpp  HeartbeatEmitter.hpp  HeartbeatEmitterService.hpp  LambdaFuncServer.hpp  LambdaFuncTask.hpp
include/DecentEnclave/Untrusted/Sgx/: DecentEnclave.hpp  DecentSgxEnclave.hpp  IasRequesterImpl.hpp  SgxEnclave.hpp  UntrustedBuffer.hpp
utils/: CMakeLists.txt
utils/SgxCap/: CMakeLists.txt  Main.cpp
